# reverb_plugin

./: BUILD.md  BUILD_FIXES.md  CMakeLists.txt  GET_STARTED.md  LICENSE  QUICK_TEST_GUIDE.md  README.md  READY_TO_BUILD.md  ReverbPlugin.jucer  USER_MANUAL.md  build.sh
Resources/presets/: LargeCathedral.xml  MediumHall.xml  PlateReverb.xml  SmallRoom.xml  VocalReverb.xml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_Simple.cpp  PluginProcessor_Simple.h  PresetManager.cpp  PresetManager.h  ReverbEngine.cpp  ReverbEngine.h  ReverbEngine_Simple.cpp
Source/DSP/: AllpassFilter.cpp  AllpassFilter.h  CombFilter.cpp  CombFilter.h  DelayLine.cpp  DelayLine.h  LowpassFilter.cpp  LowpassFilter.h  Modulator.cpp  Modulator.h
TestApp/: Makefile  main.cpp  reverb_test
test_build/: simple_test  simple_test.cpp  test_compile.cpp
